<resources>
    <string name="app_name">CARmera</string>
    <string name="title_activity_base">Base</string>
    <string name="title_activity_capture">Capture</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_tagged">Tagged</string>
    <string name="title_activity_listings">Listings</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">CARmera</string>
    <string name="title_activity_nearby">NearBy</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="action_back">Back</string>
    <string name="empty_string"></string>
    <string name="powered_by">Powered by</string>
    <string name="cario">Car.I.O.</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_sign_up">Signing you up&#8230;</string>
    <string name="login_facebook">Login Using Facebook</string>
    <string name="parse_app_id">4C3g4JMvuWMEuTVeTtjoQdvxCOv80XHRtIYnM3Kg</string>
    <string name="parse_app_key">OTwE5Qi7WuZ4gs8q66T2nKrDArWPbph3u1CmPjP1</string>
    <string name="insta_client_id">497c1f84497b43d8b663a94f9eef556e</string>
    <string name="insta_client_secret">9c02aa96435946b1b2bc31172fe9aeae</string>
    <string name="facebook_app_id">316288161899047</string>
    <string name="sinch_app_key">47d96ebb-3cf0-4b9d-84c6-11426dfc6082</string>
    <string name="sinch_app_secret">yWx/Tkn7A0WdQ7/6lu+8uw==</string>
    <string name="pref_user_privacy">Privacy</string>
    <string name="pref_title_user_name">Your Name</string>
    <string name="pref_title_user_phone">Contact Phone</string>
    <string name="pref_title_user_email">Email</string>
    <string name="pref_title_allow_contact">Allow Dealership Contact</string>
    <string name="pref_title_search_radius">Default Search Radius</string>
    <string name="pref_default_search_radius">100</string>
    <string name="str_mpg_info">Gas Mileage</string>
    <string name="str_city_mpg">City MPG</string>
    <string name="str_highway_mpg">Highway MPG</string>
    <string name="str_price_info">Price Info</string>
    <string name="str_used_private">Used Private Party</string>
    <string name="str_used_tmv">Used TMV</string>
    <string name="str_invoice">Invoice</string>
    <string name="str_msrp">New MSRP</string>
    <string name="str_engine_info">Engine Details</string>
    <string name="str_hp">Horsepower</string>
    <string name="str_torque">Torque</string>
    <string name="str_fueltype">Fuel Type</string>
    <string name="str_displacement">Engine Displacement</string>
    <string name="str_cylinder">Cylinder Count</string>
    <string name="str_configuration">Engine Configuration</string>
    <string name="str_engine_name">Engine Name</string>
    <string name="str_engine_code">Manufacturer Engine Code</string>
    <string name="str_compressor">Compressor Type</string>
    <string name="str_compression_ratio">Compression Ratio</string>
    <string name="str_valve">Valve Count</string>
    <string name="str_drivetrain">Drivetrain</string>
    <string name="str_transmission">Transmission</string>
    <string name="str_poster_image">Poster Image</string>
    <string name="str_vehicle_image">Vehicle Image</string>
    <string name="str_transmission_speed">Transmission Speed</string>
    <string name="str_transmission_type">Transmission Type</string>
    <string name="str_vehicle_name">Vehicle Name</string>
    <string name="str_total_cost_ownership">Total 5 Years Cost to Own</string>
    <string name="str_total_fuel_cost">Fuel</string>
    <string name="str_total_repair_cost">Repair</string>
    <string name="str_total_maintenance_cost">Maintenance</string>
    <string name="str_total_insurance_cost">Insurance</string>
    <string name="str_total_depr_cost">Depreciation</string>
    <string name="str_average_customer_rating">Average Customer Rating</string>
    <string name="str_customer_review_count">Customer Rating Count</string>
    <string name="str_favorites">Favorites</string>
    <string name="str_album_upload">Upload From Album</string>
    <string name="str_tagged">Tagged Vehicles</string>
    <string name="str_create_new_contact">Create New Contact</string>
    <string name="str_close_dialog">Close</string>
    <string name="str_seller_info">Seller Info</string>
    <string name="str_see_listings">Listings</string>
    <string name="str_reselect_styles">All Styles</string>
    <string name="str_no_vehicles_tagged">No Vehicles Tagged Yet!</string>
    <string name="str_vehicle_search">Search for Cars</string>
    <string name="str_vehicle_search_hint">Search For Cars</string>
    <string name="str_no_vehicle_tagged">No Vehicle Tagged, Tag Some Cars!</string>
    <string name="str_no_saved_listings">No Listings Saved, See Some Local Listings</string>
    <string name="str_no_mention">No Tags Saved/Received, Invite Some Friends!</string>
    <string name="str_no_near_listings_found">No Near Listings Found, Try Change Search Circus</string>
    <string name="str_no_near_tags_found">No Near Tags Found, Try Change Search Circus</string>
    <string name="str_share_to_friends">Share</string>
    <string name="str_save_to_local">Save</string>
    <string name="str_upload_image">Upload</string>
    <string name="title_invite_friends">Invite Friends</string>
    <string name="title_new_chat">New Chat</string>
    <string name="message_elipses">Message...</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="make">Enter car make</string>
    <string name="model">Enter car model </string>
    <string name="any">Any</string>
    <string name="dist">Distance: </string>
    <string name="min_price">Min Price: </string>
    <string name="max_price">Max Price: </string>
    <string name="network_error">Please check your network connection</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_fetching_profile">Error fetching your user profile - Please try again</string>
    <string name="error_fetching_friend_bitmap">Error fetching your friend\'s profile picture - Please try again</string>
    <string name="error_switching_screens">Error switching screens - Please try again</string>
    <string name="error_no_scores">"No scores to display"</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="welcome_message">CARmera</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_step_forward">&#xf051;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_chevron_left">&#xf053;</string>
</resources>