<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        style="@style/TableTitle"
        android:text="Total Five Year"
        android:layout_marginTop="40dp"/>

    <TextView
        style="@style/TableTitle"
        android:text="Ownership Costs"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#4169E1"
        android:id="@+id/total_cost_ownership"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                style="@style/TableEntryTitle"
                android:text="@string/str_total_fuel_cost"/>
            <TextView
                style="@style/TableEntry"
                android:id="@+id/total_fuel_cost"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TableEntryTitle"
                android:text="@string/str_total_insurance_cost"/>
            <TextView
                style="@style/TableEntry"
                android:id="@+id/total_insurance_cost"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TableEntryTitle"
                android:text="@string/str_total_repair_cost"/>
            <TextView
                style="@style/TableEntry"
                android:id="@+id/total_repair_cost"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TableEntryTitle"
                android:text="@string/str_total_maintenance_cost"/>
            <TextView
                style="@style/TableEntry"
                android:id="@+id/total_maintenance_cost"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TableEntryTitle"
                android:text="@string/str_total_depr_cost"/>
            <TextView
                style="@style/TableEntry"
                android:id="@+id/total_depreciation_cost"/>
        </TableRow>
    </TableLayout>

</LinearLayout>