<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureActivity">

    <ImageButton
        android:id="@+id/tagged_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_circle"
        android:src="@drawable/ic_action_storage"
        android:contentDescription="@string/str_tagged"
        android:layout_alignTop="@+id/favorites_btn"
        android:layout_toRightOf="@+id/activity_capture_cv_preview"
        android:layout_toEndOf="@+id/activity_capture_cv_preview"/>

    <ImageButton
        android:id="@+id/favorites_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_circle"
        android:src="@drawable/ic_action_star"
        android:contentDescription="@string/str_favorites"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <ImageButton
        android:id="@+id/upload_from_album_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_circle"
        android:src="@drawable/ic_action_upload"
        android:contentDescription="@string/str_album_upload"
        android:layout_alignTop="@+id/favorites_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <veme.cario.com.CARmera.view.CVPortraitView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/activity_capture_cv_preview" />

</RelativeLayout>