<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/search_listings_overlay"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            style="@style/TitleCenter"
            android:text="Search Listings"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                style="@style/SpinnerContainer">
                <TextView
                    style="@style/SpinnerTitle"
                    android:text="Year"/>
                <Spinner
                    style="@style/SpinnerStyle"
                    android:id="@+id/year_spinner"
                    android:prompt="@string/year">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                style="@style/SpinnerContainer">
                <TextView
                    style="@style/SpinnerTitle"
                    android:text="Make"/>
                <Spinner
                    style="@style/SpinnerStyle"
                    android:id="@+id/make_spinner"
                    android:spinnerMode="dialog"
                    android:prompt="@string/make">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                style="@style/SpinnerContainer">
                <TextView
                    style="@style/SpinnerTitle"
                    android:text="Model"/>
                <Spinner
                    style="@style/SpinnerStyle"
                    android:id="@+id/model_spinner"
                    android:prompt="@string/model">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                style="@style/SpinnerContainer">
                <TextView
                    style="@style/SpinnerTitle"
                    android:text="Distance"/>
                <Spinner
                    style="@style/SpinnerStyle"
                    android:id="@+id/distance_spinner"
                    android:prompt="@string/dist">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    style="@style/SpinnerContainer">
                    <TextView
                        style="@style/SpinnerTitle"
                        android:text="Min Price"/>
                    <Spinner
                        style="@style/SpinnerStyle"
                        android:id="@+id/range_min_spinner"
                        android:spinnerMode="dialog"
                        android:prompt="@string/min_price">
                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    style="@style/SpinnerContainer">
                    <TextView
                        style="@style/SpinnerTitle"
                        android:text="Max Price"/>
                    <Spinner
                        style="@style/SpinnerStyle"
                        android:id="@+id/range_max_spinner"
                        android:prompt="@string/max_price">
                    </Spinner>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GO!"
                android:id="@+id/search_listings_btn"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/Ivory"
                android:background="@android:color/holo_red_light"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nearby_listings_listview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_nearby_listings_overlay"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/empty_nearby_listings"
            android:text="@string/str_no_near_listings_found"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>